# Mason

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-and-run.sh  reset-submodules.sh  run.sh
.github/workflows/: ccpp.yml
api/: mason.h
api/mason/: app_node.h  application.h  camera.h  event.h  image.h  imgui_includes.h  layer.h  layers.h  log.h  mason.h  masonpch.h  mem_stack.h  rigidbody.h  task_pool.h  thread.h  thread_pool.h  transform_info.h
api/mason/al/: al_buffer.h  al_context.h  al_core.h  al_device.h  al_listener.h  al_source.h
api/mason/cl/: cl_buffer.h  cl_config.h  cl_context.h  cl_core.h  cl_device.h  cl_platform.h  cl_program.h  cl_queue.h  mason_cl_context.h
api/mason/ft/: ft_core.h  ft_face.h  ft_glyph.h
api/mason/gl/: camera.h  gl_core.h  gl_event.h  gl_event_handler.h  gl_includes.h  gl_objects.h  gl_window.h  index_buffer.h  shader_program.h  shaders.h  texture.h  texture2d.h  vb_attribute.h  vb_layout.h  vertex_array.h  vertex_buffer.h  vertex_data.h  window.h
api/mason/net/: tcp_client.h  tcp_server.h  udp_client.h  udp_server.h
sandbox/: CMakeLists.txt
sandbox/res/shader_program/: frag.fsh  metadata.txt  vert.vsh
sandbox/res/shaders/: frag.fsh  vert.vsh
sandbox/src/: cl_test.cpp  main.cpp  sandbox.cpp
src/: application.cpp  event.cpp  layers.cpp  log.cpp  mason.cpp  masonpch.cpp  thread.cpp
src/gl/: camera.cpp  gl_objects.cpp  shaders.cpp  texture.cpp  window.cpp
src/mason/: app_node.cpp  camera.cpp  image.cpp  layer.cpp  log.cpp  mason.cpp  mem_stack.cpp  rigidbody.cpp  task_pool.cpp  thread_pool.cpp  transform_info.cpp
src/mason/al/: al_buffer.cpp  al_context.cpp  al_core.cpp  al_device.cpp  al_listener.cpp  al_source.cpp
src/mason/cl/: cl_buffer.cpp  cl_context.cpp  cl_core.cpp  cl_device.cpp  cl_platform.cpp  cl_program.cpp  cl_queue.cpp  mason_cl_context.cpp
src/mason/ft/: ft_core.cpp  ft_face.cpp
src/mason/gl/: gl_core.cpp  gl_event.cpp  gl_event_handler.cpp  gl_window.cpp  index_buffer.cpp  shader_program.cpp  texture2d.cpp  vb_attribute.cpp  vb_layout.cpp  vertex_array.cpp  vertex_buffer.cpp
src/mason/net/: tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
